message BoardUpdate {
	repeated TilePos clicks = 1;
}
